--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.97",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.5.0",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.25.0",
+    "bcrypt": "^5.0.1",
     "constructs": "^10.0.0",
     "esbuild": "^0.14.42",
     "source-map-support": "^0.5.21"
