--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "test": "jest",
+    "test": "jest --verbose false",
     "cdk": "cdk"
   },
   "devDependencies": {
@@ -25,8 +25,10 @@
   "dependencies": {
     "aws-cdk-lib": "2.25.0",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "constructs": "^10.0.0",
     "esbuild": "^0.14.42",
+    "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
   }
 }
