--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
     "aws-cdk": "2.25.0",
-    "dynamodb-local": "^0.0.31",
     "jest": "^27.5.1",
+    "jest-dynalite": "^3.5.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.100.0",
+    "@aws-sdk/util-dynamodb": "^3.100.0",
     "aws-cdk-lib": "2.25.0",
     "aws-sdk": "^2.1145.0",
     "bcrypt": "^5.0.1",
