--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.100.0",
+    "@aws-sdk/types": "^3.78.0",
     "@aws-sdk/util-dynamodb": "^3.100.0",
     "aws-cdk-lib": "2.25.0",
-    "aws-sdk": "^2.1145.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "constructs": "^10.0.0",
