--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@aws-sdk/types": "^3.78.0",
     "@types/aws-lambda": "^8.10.97",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.5.0",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
     "aws-cdk": "2.25.0",
+    "esbuild": "^0.14.42",
     "jest": "^27.5.1",
     "jest-dynalite": "^3.5.1",
     "ts-jest": "^27.1.4",
@@ -25,13 +27,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.100.0",
-    "@aws-sdk/types": "^3.78.0",
     "@aws-sdk/util-dynamodb": "^3.100.0",
     "aws-cdk-lib": "2.25.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "constructs": "^10.0.0",
-    "esbuild": "^0.14.42",
+    "dotenv": "^16.0.1",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
   }
