--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "devDependencies": {
     "@aws-sdk/types": "^3.78.0",
     "@types/aws-lambda": "^8.10.97",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^27.5.0",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
-    "aws-cdk": "2.25.0",
     "esbuild": "^0.14.42",
     "jest": "^27.5.1",
     "jest-dynalite": "^3.5.1",
@@ -29,7 +28,7 @@
     "@aws-sdk/client-dynamodb": "^3.100.0",
     "@aws-sdk/util-dynamodb": "^3.100.0",
     "aws-cdk-lib": "2.25.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "constructs": "^10.0.0",
     "dotenv": "^16.0.1",
