--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.100.0",
+    "@aws-sdk/node-http-handler": "^3.110.0",
     "@aws-sdk/util-dynamodb": "^3.100.0",
     "aws-cdk-lib": "^2.25.0",
     "bcryptjs": "^2.4.3",
