--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.78.0",
+    "@swc-node/jest": "^1.5.2",
     "@types/aws-lambda": "^8.10.97",
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^28.1.4",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
     "esbuild": "^0.14.42",
-    "jest": "^27.5.1",
+    "jest": "^28.1.2",
     "jest-dynalite": "^3.5.1",
-    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
-    "typescript": "~3.9.7"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.100.0",
